完成新增套餐和上传图片功能

--- a/health_parent/health_web/src/main/webapp/pages/checkgroup.html
+++ b/health_parent/health_web/src/main/webapp/pages/checkgroup.html
@@ -349,9 +349,11 @@
                     if (res.data.flag) {
                         this.tableData = res.data.data;
                         //查询所有检查项成功
+
+                    }else{
                         this.$message({
                             message: res.data.message,
-                            type: 'success'
+                            type: 'error'
                         });
                     }
                 })
